--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,40 @@
-numpy==1.26.4
-pandas==2.1.4
 fastapi==0.104.1
 uvicorn[standard]==0.24.0
 supabase==2.0.3
+pandas==2.1.3
+numpy==1.26.2
 python-dotenv==1.0.0
 python-multipart==0.0.6
+
+# Explainability dependencies
+scikit-learn==1.7.2
+lime==0.2.0.1
+shap==0.49.1
+
+# SHAP dependencies (auto-installed but listed for clarity)
+scipy==1.16.3
+numba==0.62.1
+llvmlite==0.45.1
+cloudpickle==3.1.1
+slicer==0.0.8
+tqdm==4.67.1
+
+# Visualization dependencies
+matplotlib==3.10.7
+pillow==12.0.0
+
+# Additional ML/scientific computing dependencies
+scikit-image==0.25.2
+joblib==1.5.2
+threadpoolctl==3.6.0
+networkx==3.5
+imageio==2.37.0
+lazy-loader==0.4
+tifffile==2025.10.16
+
+# Plotting utilities
+contourpy==1.3.3
+cycler==0.12.1
+fonttools==4.60.1
+kiwisolver==1.4.9
+pyparsing==3.2.5
